# llama_index

./: .env.example  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  =  AGENTS.md  BUILD  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Llama-index_post_processing_reranker.ipynb  MANIFEST.in  MANIFEST_llama.in  Makefile  MilvusIndexDemo.ipynb  PLUGIN_MARKETPLACE.md  PROPOSAL.md  RAGChecker.ipynb  README.md  RELEASE_HEAD.md  SECURITY.md  STALE.md  TEST_COVERAGE_ANALYSIS.md  Untitled.ipynb  WWW.OLITOGEL.COM BISA JADI BANDAR DARAT DI SITUS OLITOGEL  api_test.py  app.py  benchmark_ingestion.py  brave-dev-setup.sh  check_import.py  clearNotebookMetadata.sh  create_llama_package.sh  data_requirements.txt  deleteme.py  (+51 more)
docs/: .gitignore  BUILD  DOCS_README.md  Makefile  README.md  astro.config.mjs  build_notebooks.py  changelog.rst  conf.py  deprecated_terms.md  index.rst  local_testing  manage_retrieval_benchmark.ipynb  merge_llama_deploy_docs.py  mkdocs.yml  mkdocs_api_only.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepare_for_build.py  pyproject.toml  readthedocs-environment.yml  requirements.txt  test.py
docs/_static/: sitemap.xml
docs/advanced_techniques/: principled_dev_practices.md
docs/api_reference/: agents.rst  callbacks.rst  composability.rst  embeddings.rst  evaluation.rst  example_notebooks.rst  finetuning.rst  index.rst  indices.rst  instrumentation.rst  llm_predictor.rst  llms.rst  memory.rst  mkdocs.yml  multi_modal.rst  node.rst  node_postprocessor.rst  playground.rst  prompts.rst  pyproject.toml  query.rst  readers.rst  response.rst  service_context.rst  storage.rst  struct_store.rst
docs/changes/: deprecated_terms.md
docs/community/: app_showcase.md  frequently_asked_questions.md  full_stack_projects.md  integrations.md
docs/cookbooks/: anthropic_haiku.ipynb  mistralai.ipynb  mixedbread_reranker.ipynb
docs/development/: changelog.rst  contributing.rst  documentation.rst  privacy.md
docs/docs/: CHANGELOG.md  CONTRIBUTING.md  DOCS_README.md  _meta.yml  index.md  llamaindex-agents.txt  llamaindex-rag-techniques.txt  llms.txt  test.txt
docs/end_to_end_tutorials/: agents.md  apps.md  chatbots.md  discover_llamaindex.md  finetuning.md  graphs.md  one_click_observability.md  principled_dev_practices.md  privacy.md  question_and_answer.md  structured_data.md  usage_pattern.md  use_cases.md
docs/examples/: index.md  logicnodes_integration.ipynb  multimodal_agent_workflow_healthcare.ipynb
docs/gallery/: app_showcase.md
docs/getting_started/: FAQ.md  concepts.md  customization.md  customization.rst  discover_llamaindex.md  installation.md  overview.rst  reading.md  starter_example.md  starter_example_local.md  v0_10_0_migration.md
docs/guides/: building_a_chatbot.md  fullstack_app_guide.md  index_guide.md  notebooks.rst  primer.md  primer.rst  sql_guide.md  tutorials.rst  usage_pattern.md  use_cases.md
docs/how_to/: analysis.rst  callbacks.rst  chat_engine.md  composability.md  cost_analysis.md  custom_llms.md  custom_prompts.md  customization.rst  data_connectors.md  embeddings.md  indices.rst  insert.md  integrations.rst  optimizers.md  output_parsing.md  overview.rst  query_engine.md  query_interface.rst  query_transformations.md  storage.md  storage.rst  update.md  using_with_langchain.md  vector_stores.md
docs/optimizing/: building_rag_from_scratch.md  custom_modules.md  production_rag.md
docs/overrides/: main.html
docs/reference/: callbacks.rst  composability.rst  docstore.rst  embeddings.rst  example_notebooks.rst  indices.rst  list.rst  llm_predictor.rst  llms.rst  node.rst  node_parser.rst  node_postprocessor.rst  optimizers.rst  overview.rst  playground.rst  prompts.rst  query.rst  readers.rst  response.rst  service_context.rst  storage.rst  struct_store.rst
docs/scripts/: astro_migration.py  merge_external_docs.py  merge_llama_deploy_docs.py  prepare_for_build.py  serve.py
docs/src/: content.config.ts
docs/understanding/: SOURCE.md  understanding.md
docs/use_cases/: agents.md  apps.md  chatbots.md  extraction.md  multimodal.md  q_and_a.md  queries.md  rag_cli.md
environments/rubric_discovery/: __init__.py  conftest.py  pyproject.toml  rubric_discovery.py
llama-dev/: .gitignore  LICENSE  README.md  pyproject.toml
llama-dev/llama_dev/: cli.py  utils.py
llama-dev/tests/: conftest.py  test_cli.py  test_utils.py
llama-index-cli/: CHANGELOG.MD  README.md  pyproject.toml
llama-index-cli/tests/: BUILD  test_marketplace.py  test_rag.py
llama-index-core/: .gitignore  BUILD  CHANGELOG.md  CONTRIBUTING.md  README.md  modified_files.txt  pyproject.toml  requirements.txt  test.py
llama-index-core/notebooks/: event_management.ipynb
llama-index-core/storage/: docstore.json  graph_store.json  index_store.json  object_node_mapping.pickle
llama-index-core/tests/: BUILD  conftest.py  docker-compose.yml  ruff.toml  test_async_resolve_binary.py  test_async_utils.py  test_img_utils.py  test_language_utils.py  test_prompt_helper_empty_input.py  test_public_exports.py  test_rate_limiter.py  test_recursive_walker_dos.py  test_schema.py  test_types.py  test_utils.py
llama-index-instrumentation/: .gitignore  README.md  pyproject.toml
llama-index-instrumentation/tests/: test_dispatcher.py  test_manager.py  test_propagation.py  test_shutdown.py
llama-index-networks/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
llama-index-packs/llama-index-packs-code-hierarchy/: .gitignore  BUILD  README.md  pyproject.toml
llama-index-packs/llama-index-packs-docugami-kg-rag/: README.md  pyproject.toml
llama-index-packs/llama-index-packs-gestell-sdk/: README.md  pyproject.toml  requirements.txt
llama-index-packs/llama-index-packs-memary/: BUILD  README.md  pyproject.toml
llama-index-packs/llama-index-packs-multimodal-agentic-rag/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
new-docs/: absolute_logs.txt  generate_examples_toc.py  mkdocs.yml  prepare_for_build.py  pyproject.toml  requirements.txt
(+16383 files in other folders)
