[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Jerry Liu <jerry@llamaindex.ai>"]
classifiers = [
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "Interface between LLMs and your data"
documentation = "https://docs.llamaindex.ai/en/stable/"
homepage = "https://llamaindex.ai"
keywords = ["LLM", "NLP", "RAG", "data", "devtools", "index", "retrieval"]
license = "MIT"
maintainers = [
  "Andrei Fajardo <andrei@runllama.ai>",
  "Haotian Zhang <ht@runllama.ai>",
  "Jerry Liu <jerry@llamaindex.ai>",
  "Logan Markewich <logan@llamaindex.ai>",
  "Simon Suo <simon@llamaindex.ai>",
  "Sourabh Desai <sourabh@llamaindex.ai>"
]
packages = [{include = "llama_index", from = "_llama-index"}]
name = "llama-index-test-starter"
readme = "README.md"
repository = "https://github.com/run-llama/llama_index"
version = "0.0.4"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
llama-index-legacy = "^0.0.1"
llama-index-llms-openai = "^0.0.1"
llama-index-llms-llama-cpp = "^0.0.1"
llama-index-embeddings-openai = "^0.0.1"
llama-index-embeddings-huggingface = "^0.0.1"
llama-index-program-openai = "^0.0.3"
llama-index-question-gen-openai = "^0.0.2"
llama-index-agent-openai = "^0.0.3"
llama-index-vector-stores-chroma = "0.0.2a0"
llama-index-core = "^0.9.44.post2"
llama-index-readers-file = "^0.0.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
autodoc-pydantic = "<=1.9.0"
docutils = "<0.17"
furo = ">=2023.3.27"
m2r2 = "0.3.2"
myst-nb = "0.17.2"
myst-parser = "0.18.1"
pydantic = "<2.0.0"
sphinx = ">=4.3.0"
sphinx-autobuild = "^2021.3.14"
sphinx-automodapi = "^0.16.0"
sphinx-reredirects = "^0.1.3"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-gtagjs = "^0.2.1"

[tool.poetry.scripts]
llamaindex-cli = 'llama_index.core.command_line.command_line:main'

[[tool.poetry.source]]
name = "nvidia-pypi"
priority = "supplemental"
url = "https://pypi.nvidia.com"
