[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Laurie Voss <github@seldo.com>"]
description = ""
name = "docs"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-autorefs = "^1.0.1"
mkdocs-click = "^0.8.1"
mkdocs-github-admonitions-plugin = "^0.0.2"
mkdocs-include-dir-to-nav = "^1.2.0"
mkdocs-jupyter = "^0.24.6"
mkdocs-material = "^9.5.13"
mkdocs-material-extensions = "1.3.1"
mkdocs-redirects = "^1.2.1"
mkdocs-render-swagger-plugin = "^0.1.2"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
griffe-fieldz = "^0.2.0"
llama_deploy = {extras = ["awssqs", "kafka", "rabbitmq", "redis"], version = "<1"}
appnope = "0.1.4"
asttokens = "2.4.1"
attrs = "23.2.0"
babel = "2.14.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
comm = "0.2.2"
debugpy = "1.8.1"
decorator = "5.1.1"
defusedxml = "0.7.1"
executing = "2.0.1"
fastjsonschema = "2.19.1"
ghp-import = "2.1.0"
idna = "3.7"
ipykernel = "6.29.3"
ipython = "8.22.2"
jedi = "0.19.1"
jinja2 = "^3.1.5"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
jupyter-client = "8.6.1"
jupyter-core = "5.7.2"
jupyterlab-pygments = "0.3.0"
jupytext = "1.16.1"
markdown = "^3.5.2"
markdown-it-py = "^3.0.0"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.6"
mdit-py-plugins = "0.4.0"
mdurl = "0.1.2"
mergedeep = "1.3.4"
mistune = "3.0.2"
nbclient = "0.10.0"
nbconvert = "7.16.2"
nbformat = "5.10.2"
nest-asyncio = "1.6.0"
packaging = "24.0"
paginate = "0.5.6"
pandocfilters = "1.5.1"
parso = "0.8.3"
pathspec = "0.12.1"
pexpect = "4.9.0"
platformdirs = "4.2.0"
prompt-toolkit = "3.0.43"
psutil = "5.9.8"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.17.2"
pymdown-extensions = "10.7.1"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.1"
pyyaml-env-tag = "0.1"
pyzmq = "25.1.2"
referencing = "0.33.0"
regex = "2023.12.25"
requests = "^2.32.0"
rpds-py = "0.18.0"
six = "1.16.0"
soupsieve = "2.5"
stack-data = "0.6.3"
tinycss2 = "1.2.1"
toml = "0.10.2"
tornado = "6.4.2"
traitlets = "5.14.2"
urllib3 = "2.2.2"
watchdog = "4.0.0"
wcwidth = "0.2.13"
webencodings = "0.5.1"

[tool.poetry.scripts]
merge-llama-deploy-docs = "scripts.merge_llama_deploy_docs:main"
prepare-for-build = "scripts.prepare_for_build:main"
serve = "scripts.serve:main"
