[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "ipython==8.10.0",
    "jupyter>=1.0.0,<2",
    "llama-index-vector-stores-chroma>=0.4.1,<0.5",
    "mypy==0.991",
    "pre-commit==3.2.0",
    "pylint==2.15.10",
    "pytest==7.2.1",
    "pytest-mock==3.11.1",
    "ruff==0.0.292",
    "tree-sitter-languages>=1.8.0,<2",
    "types-Deprecated>=0.1.0",
    "types-PyYAML>=6.0.12.12,<7",
    "types-protobuf>=4.24.0.4,<5",
    "types-redis==4.5.5.0",
    "types-requests==2.28.11.8",
    "types-setuptools==67.1.0.0",
]

[project]
name = "llama-index-cli"
version = "0.4.3"
description = "llama-index cli"
authors = [{name = "llamaindex"}]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
maintainers = [
    {name = "Andrei Fajardo", email = "andrei@runllama.ai"},
    {name = "Haotian Zhang", email = "ht@runllama.ai"},
    {name = "Jerry Liu", email = "jerry@llamaindex.ai"},
    {name = "Logan Markewich", email = "logan@llamaindex.ai"},
    {name = "Simon Suo", email = "simon@llamaindex.ai"},
    {name = "Sourabh Desai", email = "sourabh@llamaindex.ai"},
]
dependencies = [
    "llama-index-core>=0.12.0,<0.13",
    "llama-index-embeddings-openai>=0.3.1,<0.4",
    "llama-index-llms-openai>=0.4.0,<0.5",
]

[project.scripts]
llamaindex-cli = "llama_index.cli.command_line:main"

[tool.codespell]
check-filenames = true
check-hidden = true
# Feel free to un-skip examples, and experimental, you will just need to
# work through many typos (--write-changes and --interactive will help)
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.mypy]
disallow_untyped_defs = true
# Remove venv skip when integrated with pre-commit
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.9"
