[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest"]

[project]
name = "llama-index-instrumentation"
version = "0.4.2"
description = "Instrumentation and Observability for LlamaIndex"
license = "MIT"
readme = "README.md"
authors = [{name = "Massimiliano Pippi", email = "mpippi@gmail.com"}]
requires-python = ">=3.10, <4.0"
dependencies = ["deprecated>=1.2.18", "pydantic>=2.11.5"]

[project.scripts]
llama-index-instrumentation = "llama_index_instrumentation:main"

[project.urls]
Homepage = "https://llamaindex.ai"
Repository = "https://github.com/run-llama/llama_index/tree/main/llama-index-instrumentation"
Documentation = "https://developers.llamaindex.ai/python/framework/module_guides/observability/instrumentation/"
