[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.codespell]
check-filenames = true
check-hidden = true
# Feel free to un-skip examples, and experimental, you will just need to
# work through many typos (--write-changes and --interactive will help)
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.mypy]
disallow_untyped_defs = true
# Remove venv skip when integrated with pre-commit
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.8"

[tool.poetry]
authors = ["Andrei Fajardo <andrei@llamaindex.ai>", "Jerry Liu <jerry@llamaindex.ai>"]
description = "llama-index networks  integration"
exclude = ["**/BUILD"]
license = "MIT"
maintainers = [
    "Andrei Fajardo <andrei@runllama.ai>",
    "Haotian Zhang <ht@runllama.ai>",
    "Jerry Liu <jerry@llamaindex.ai>",
    "Logan Markewich <logan@llamaindex.ai>",
    "Simon Suo <simon@llamaindex.ai>",
    "Sourabh Desai <sourabh@llamaindex.ai>",
]
name = "llama-index-networks"
packages = [{include = "llama_index/"}]
readme = "README.md"
version = "0.5.1"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = {extras = ["all"], version = "^0.115.6"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-jose = "^3.3.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = {extras = ["dotenv"], version = "^2.6.1"}
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"
ecdsa = ">=0.19.0"
llama-index-core = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = ">=23.7.0,<=24.3.0"}
codespell = {extras = ["toml"], version = ">=v2.2.6"}
ipython = "8.10.0"
jupyter = "^1.0.0"
llama-index-embeddings-openai = "^0.3.0"
llama-index-llms-openai = "^0.3.0"
llama-index-readers-file = "^0.4.0"
mypy = "0.991"
pre-commit = "3.2.0"
pylint = "2.15.10"
pytest = "7.2.1"
pytest-mock = "3.11.1"
ruff = "0.0.292"
tree-sitter-languages = "^1.8.0"
types-Deprecated = ">=0.1.0"
types-PyYAML = "^6.0.12.12"
types-protobuf = "^4.24.0.4"
types-redis = "4.5.5.0"
types-requests = "2.28.11.8"  # TODO: unpin when mypy>0.991
types-setuptools = "67.1.0.0"
